fixed whitespace problem and added headlines

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@
 html {
   /* height: fit-content; */
   width: 100%;
+  background-color: var(--background-color);
 }
 body {
   background-color: var(--background-color);
